# ostep

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml  rustfmt.toml
initial-utilities/wcat/: Cargo.toml  log.json
initial-utilities/wcat/src/: lib.rs  main.rs
tester/: Cargo.toml  build.rs  helix-log
tester-impl/: Cargo.toml
tester-impl/src/: expand.rs  lib.rs  result_fn.rs
tester/src/: args.rs  main.rs  spinner.rs  test.rs
