[package]
name = "tester"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ostep-tester"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.101"
cargo_metadata = { git = "https://github.com/oli-obk/cargo_metadata.git" }
clap = { version = "4.5.60", features = ["derive", "wrap_help"] }
crossterm = { git = "https://github.com/crossterm-rs/crossterm.git", features = [
  "event-stream",
] }
futures = "0.3.32"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["full"] }
